2016-05-15  eric wolf  <wolf@talisman>

	* CHANGELOG: Version 1.06 API change. Changes how things are passed back to client. Previously, only things directly passed back were passed back. Now it passes back all the things in the return list plus all the things those directly reference.
	* change was is passed by to client by default
	* passes all in return list, plus all those directly reference
	* assumes that some encapsulation will be done with private members


	1.04 - added a cgi/modperl flavor. The API between client and server was updated for this.
	Updating both yote.js and Yote::Server ( as part of a normal upgrade ) will make this
	transparent

