@@ -1,3 +1,10 @@
+2016-06-06  eric wolf  <wolf@talisman>
+	* CHANGELOG: 1.08 : All errors return as JSON. Those not specific just have the message 'ERROR'
+
+2016-06-05  eric wolf  <wolf@talisman>
+	* CHANGELOG: 1.07 : added _onLogin method to login object that is called when the login succeeds.
+
+	
 2016-05-15  eric wolf  <wolf@talisman>
 
 	* CHANGELOG: Version 1.06 API change. Changes how things are passed back to client. Previously, only things directly passed back were passed back. Now it passes back all the things in the return list plus all the things those directly reference.
